# ffmpeg-nodejs

./: .gitignore  .npmignore  CMakeLists.txt  binding.gyp  build.sh  index.js  package.json  readme.md  run.ps1  run.sh
.devcontainer/: Dockerfile  devcontainer.json
cmake/module/: FindFFmpeg.cmake  FindTurboJpeg.cmake
src/: collection.c  collection.h  common.c  common.h  ffmpeg_nodejs.c  ffmpeg_nodejs.h  node_api.h  record_rtsp.c  record_rtsp.h  record_video.c  record_video.h  video2images.c  video2images.h
test/: test.js  test_video2images.js  transform.sh  verifier.proto  verifier_pb.js
test/verifier/: test.js  verifier.proto  verifier_pb.js
